# sample-project

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: BuildType.cmake
doc/: TODO.md
src/: CMakeLists.txt  main.cpp  main.h  version.cpp.in  version.h
tests/: CMakeLists.txt  test_main.cpp  test_version.cpp
